manifests/promptflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promptflow-app
  namespace: promptflow-ns
spec:
  selector:
    matchLabels:
      app: promptflow-app
  template:
    metadata:
      labels:
        app: promptflow-app
    spec:
      containers:
      - name: promptflow-container
        image: quay.io/ltomasbo/promptflow-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
