manifests/promptflow/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: promptflow-svc
  namespace: promptflow-ns
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: promptflow-app
